use fluter install task instead of version

--- a/expense_tracker_flutter_app/devops/azure-pipelines.yml
+++ b/expense_tracker_flutter_app/devops/azure-pipelines.yml
@@ -9,8 +9,9 @@ pool:
   vmImage: '$(buildImage)'
 
 steps:
-  - task: UseFlutterVersion@0
+  - task: FlutterInstall@0
     inputs:
+      channel: 'stable'
       version: '$(flutterVersion)'
 
   - script: flutter pub get
