--- a/expense_tracker_flutter_app/devops/azure-pipelines.yml
+++ b/expense_tracker_flutter_app/devops/azure-pipelines.yml
@@ -9,7 +9,7 @@ pool:
   vmImage: '$(buildImage)'
 
 steps:
-  - task: FlutterInstall@0
+  - task: Hey24sheep.flutter.flutter-install.FlutterInstall@0
     inputs:
       channel: 'stable'
       version: '$(flutterVersion)'
