check if flutter already exists

--- a/expense_tracker_flutter_app/devops/azure-pipelines.yml
+++ b/expense_tracker_flutter_app/devops/azure-pipelines.yml
@@ -9,10 +9,8 @@ pool:
   vmImage: '$(buildImage)'
 
 steps:
-  - task: Hey24sheep.flutter.flutter-install.FlutterInstall@0
-    inputs:
-      channel: 'stable'
-      version: '$(flutterVersion)'
+  - script: flutter --version
+    displayName: 'Check Flutter version'
 
   - script: flutter pub get
     displayName: 'Install dependencies'
