--- a/expense_tracker_flutter_app/devops/azure-pipelines.yml
+++ b/expense_tracker_flutter_app/devops/azure-pipelines.yml
@@ -9,6 +9,14 @@ pool:
   vmImage: '$(buildImage)'
 
 steps:
+  - script: |
+      git clone https://github.com/flutter/flutter.git -b stable
+      echo "##vso[task.setvariable variable=PATH]$(Build.SourcesDirectory)/flutter/bin:$PATH"
+    displayName: 'Install Flutter SDK manually'
+
+  - script: flutter doctor
+    displayName: 'Verify Flutter installation'
+
   - script: flutter --version
     displayName: 'Check Flutter version'
 
