fix broken pipeline

--- a/expense_tracker_flutter_app/devops/azure-pipelines.yml
+++ b/expense_tracker_flutter_app/devops/azure-pipelines.yml
@@ -9,20 +9,31 @@ pool:
   vmImage: '$(buildImage)'
 
 steps:
-  - task: UseFlutterVersion@0
-    inputs:
-      version: '$(flutterVersion)'
+  - script: |
+      git clone https://github.com/flutter/flutter.git -b stable
+      echo "##vso[task.setvariable variable=PATH]$(Build.SourcesDirectory)/flutter/bin:$PATH"
+    displayName: 'Install Flutter SDK manually'
+
+  - script: flutter doctor
+    displayName: 'Verify Flutter installation'
+
+  - script: flutter --version
+    displayName: 'Check Flutter version'
 
   - script: flutter pub get
+    workingDirectory: 'expense_tracker_flutter_app'
     displayName: 'Install dependencies'
 
   - script: flutter test
+    workingDirectory: 'expense_tracker_flutter_app'
     displayName: 'Run Dart & Flutter tests'
 
   - script: flutter build apk --release
+    workingDirectory: 'expense_tracker_flutter_app'
     displayName: 'Build Android APK'
 
   - script: flutter build ios --release --no-codesign
+    workingDirectory: 'expense_tracker_flutter_app'
     displayName: 'Build iOS IPA (unsigned)'
 
   - task: CopyFiles@2
